--- a/less/theme.less
+++ b/less/theme.less
@@ -23,6 +23,30 @@ body {
 	cursor: pointer;
 }
 
+.container .list-group-item {
+  padding: 5px 10px;
+}
+
+.container .list-group-item .billable {
+  display: inline-block;
+  width: 18px;
+}
+
+.container .list-group-item .last_update {
+  position: relative;
+}
+
+.container .list-group-item .last_update span {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  font-style: italic;
+}
+
+.container .bg-info {
+    background-color: #D9EDF7 !important;
+}
+
 h1, .h1 { font-size: floor(@font-size-base * 2.15); } // ~30px
 h2, .h2 { font-size: ceil(@font-size-base * 1.70); } // ~24px
 h3, .h3 { font-size: ceil(@font-size-base * 1.25); } // ~18px
