--- a/lib/bootstrap/less/variables.less
+++ b/lib/bootstrap/less/variables.less
@@ -316,7 +316,7 @@
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      ((1140px + @grid-gutter-width));
+@container-large-desktop:      auto;
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
